# Langgraph

./: .env  .gitignore  requirements.txt
Langgraph-basic/: basiclanggraph.ipynb  chatbotmultipletools.ipynb  conditional_agents.ipynb  drafter.py  leave_request.txt  reActAgent.ipynb  sequential_agent.ipynb  simplelanggraph.ipynb
LanggraphProject/agentic-rag/: .gitignore  app.py  graph.py  requirements.txt  retrievr.py  tools.py
LanggraphProject/agentic-rag/vectorstore/: index.faiss  index.pkl
LanggraphProject/langgraph-rag/: agentic_rag.py  app.py  document_store.py  requirements.txt
LanggraphProject/langgraph-rag/agrag/: pyvenv.cfg
LanggraphProject/langgraph-rag/agrag/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
LanggraphProject/langgraph-rag/vectorstore/: index.pkl
LanggraphProject/router-langgraph/: main.py  pyproject.toml  requirements.txt
LanggraphProject/visual-rag/: main.py  react_agent_graph.py  requirements.txt
LanggraphProject/visual-rag/LLM/: gemini.py
LanggraphProject/visual-rag/UI/: app.py
LanggraphProject/visual-rag/vrag/: pyvenv.cfg
LanggraphProject/visual-rag/vrag/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
pydantic/: intro.ipynb
